objects/PLCJob__c.object
<CustomObject>
    <description>This object is used for WRF-POLK. Object to track all PLC Jobs.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActiveDaysOnHold__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>IF (  (NOT (ISNULL( DateOnHold1__c))&amp;&amp; 
      ISNULL( DateReleasedFromHold1__c) )
	, TODAY() - DateOnHold1__c
	, IF (  ( NOT (ISNULL( DateOnHold2__c))&amp;&amp; 
		      ISNULL( DateReleasedFromHold2__c) )
		, TODAY() - DateOnHold2__c
			, IF (  ( NOT (ISNULL( DateOnHold3__c))&amp;&amp; 
			      ISNULL( DateReleasedFromHold3__c) )
			, TODAY() - DateOnHold3__c
				, IF (  ( NOT (ISNULL( DateOnHold4__c))&amp;&amp; 
				      ISNULL( DateReleasedFromHold4__c) )
				, TODAY() - DateOnHold4__c
					, IF (  ( NOT (ISNULL( DateOnHold5__c))&amp;&amp; 
					      ISNULL( DateReleasedFromHold5__c) )
					, TODAY() - DateOnHold5__c
					, 0))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Days On Hold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualCost__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmIAssignedRep__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>IF(  WorkRequestForm__r.PrimarySalesContact__c  = $User.Id ,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Am I Assigned WR Rep?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedToStart__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>CASE(MOD( ProgrammerAssignedDate__c - DATE(1985,6,24),7), 

0 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 

1 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 

2 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 

3 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 

4 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 

5 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 

6 , CASE( MOD( StartDate__c - ProgrammerAssignedDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 

999) 

+ 

(FLOOR(( StartDate__c - ProgrammerAssignedDate__c )/7)*5) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Lag Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalendarWeekRange__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>TEXT(MONTH( DateofDelivery__c  - MOD( DateofDelivery__c  - DATE(1900, 1, 7), 7)))
+ &apos;/&apos; +
TEXT(DAY( DateofDelivery__c  - MOD(DateofDelivery__c - DATE(1900, 1, 7), 7)))
+ &apos;/&apos; +
TEXT(YEAR( DateofDelivery__c  - MOD( DateofDelivery__c  - DATE(1900, 1, 7), 7)))
+ &apos; to &apos; + 
TEXT(MONTH(( DateofDelivery__c  + 7) - MOD( DateofDelivery__c  - DATE(1900, 1, 7), 7)))
+ &apos;/&apos; +
TEXT(DAY(( DateofDelivery__c  + 7) - MOD( DateofDelivery__c  - DATE(1900, 1, 7), 7)))
+ &apos;/&apos; +
TEXT(YEAR(( DateofDelivery__c  + 7) - MOD( DateofDelivery__c  - DATE(1900, 1, 7), 7)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Week Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarWeek__c</fullName>
        <description>This field is used for WRF-POLK. Calendar Week # based upon date of delivery</description>
        <formula>lpad(
		text(CEILING((( DateofDelivery__c - DATE(YEAR( DateofDelivery__c ), 1, 1) + 1) + 
						MOD(DATE(YEAR( DateofDelivery__c ), 1, 1) - DATE(1900, 1, 7), 7)) / 7) )
		,2,&apos;0&apos;	
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarYearWeek__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>CalendarYear__c &amp; (CalendarWeek__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Year &amp; Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CalendarYear__c</fullName>
        <description>This field is used for WRF-POLK. Calendar Year based on date of delivery.</description>
        <formula>Text (YEAR( DateofDelivery__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calendar Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeCounter__c</fullName>
        <description>This field is used for WRF-POLK. Increments up whenever a job is created from a change request</description>
        <label>Change Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChangeLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for WRF-POLK.</description>
        <label>Change Log</label>
        <referenceTo>ChangeLog__c</referenceTo>
        <relationshipLabel>PLC Jobs</relationshipLabel>
        <relationshipName>PLCJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeNumber__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Change #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseToDelivery__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>(datevalue(DateTimeOfDelivery__c) - Opportunity__r.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Wait Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloseToSubmitted__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>(WRFSubmitted__c - Opportunity__r.CloseDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Lag Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Add comments you feel pertinent to the job</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CommercialJobTasks__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Commercial Job Tasks</label>
        <summaryFilterItems>
            <field>JobTask__c.TaskName__c</field>
            <operation>equals</operation>
            <value>Commercial Review</value>
        </summaryFilterItems>
        <summaryForeignKey>JobTask__c.PLCJob__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CostFactor__c</fullName>
        <description>This field is used for WRF-POLK. This is the average cost for someone in production.  Gets updated with a trigger.</description>
        <label>Cost Factor</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CreateDocumentationTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Create Documentation Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatePeerReviewTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Create Peer Review Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateSetupMeetingTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Create Setup Meeting Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreateToSubmitted__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>WRFSubmitted__c - Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create To Submitted</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedToDelivery__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>datevalue(DateTimeOfDelivery__c) -  datevalue(Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Exact timing only required if SLA requires measure of 4 hour turnaround</inlineHelpText>
        <label>Created To Delivery</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CycleOccurance__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cycle Occurance</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CycleStart__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cycle Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CycleYear__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cycle Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week Days</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Six Week Cycle</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateOnHold1__c</fullName>
        <description>This field is used for WRF-POLK. Used to store the date PLC placed on hold</description>
        <label>Date On Hold1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOnHold2__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Date On Hold2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateOnHold3__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Date On Hold3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReleasedFromHold1__c</fullName>
        <description>This field is used for WRF-POLK. Used to store date PLC was released from hold.</description>
        <label>Date Released from Hold1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReleasedFromHold2__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Date Released from Hold2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateReleasedFromHold3__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Date Released from Hold3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeOfDelivery__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>Exact timing only required if SLA requires measure of 4 hour turnaround.</inlineHelpText>
        <label>Date &amp; Time Of Delivery</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateofDelivery__c</fullName>
        <description>This field is used for WRF-POLK. Used to translate Date/Time of Delivery to just date for Calendar week formula field.</description>
        <formula>DateTimeOfDelivery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysOnHold1__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>DateReleasedFromHold1__c  -  DateOnHold1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Hold #1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOnHold2__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>DateReleasedFromHold2__c  -  DateOnHold2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Hold #2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOnHold3__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>DateReleasedFromHold3__c  -  DateOnHold3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days On Hold #3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefectFree10__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>if( DefectiveDeliverables__c  = 0, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Free Counter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefectFree__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>if( DefectiveDeliverables__c  = 0, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Free</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefectiveDeliverables__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Defective Deliverables</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliverableEstimate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Deliverable Estimate</label>
        <summarizedField>JobTask__c.EstimatedHours__c</summarizedField>
        <summaryFilterItems>
            <field>JobTask__c.TaskName__c</field>
            <operation>equals</operation>
            <value>Deliverable</value>
        </summaryFilterItems>
        <summaryForeignKey>JobTask__c.PLCJob__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DiscoveryToDelivery__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>datevalue(DateTimeOfDelivery__c) - Opportunity__r.DiscoveryDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discovery To Delivery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EffortCompletedDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Effort Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EncryptionKey__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Encryption Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EncryptionRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Encryption Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExtendedJob__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>JobNumber__c &amp;&quot;-&quot; &amp; text(CycleOccurance__c) &amp;&quot;-&quot;&amp;  text(Multipartnum__c) &amp; &quot;-&quot; &amp; text(ChangeCounter__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal Job # - Occurrence # - Part # - Change #</inlineHelpText>
        <label>Extended Job</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalDeliverables__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>External Deliverables</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTPInformationInWRF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Information In WRF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTPPassword__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTPPath__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTPRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FTPUserID__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>FTP User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCyclical__c</fullName>
        <formula>if((Text(JobType__c) = &apos;Cyclical&apos; || Text(JobType__c)=&apos;Internal Cyclical&apos; 
                || Text(JobType__c)=&apos;Lights Out Process&apos;) &amp;&amp; 
                ISNULL(CycleStart__c ) &amp;&amp; 
                NumberOfCycles__c &gt; 1 &amp;&amp; 
                CycleOccurance__c &gt; 0 &amp;&amp; 
                Multipart__c = FALSE &amp;&amp;
                NumberOfCycles__c  &lt; 130
            ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Cyclical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMultipart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK. Gets updated to true when</description>
        <inlineHelpText>If this is checked this job is part of a multi-part job. Changes to the fields below will not affect the other jobs that have been created, and should be used for reference purposes only.</inlineHelpText>
        <label>Is Multipart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobActualHours__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Actual Hours</label>
        <summarizedField>JobTask__c.ActualHours__c</summarizedField>
        <summaryForeignKey>JobTask__c.PLCJob__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JobCompletedDelivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Completed &amp; Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobEstimatedHours__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Estimated Hours</label>
        <summarizedField>JobTask__c.EstimatedHours__c</summarizedField>
        <summaryForeignKey>JobTask__c.PLCJob__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JobName__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobNumber__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobRevenue__c</fullName>
        <description>This field is used for WRF-POLK. If it&apos;s a multi-cycle job we divide the revenue into the # of cycles.</description>
        <formula>if(BlankValue(NumberOfCycles__c,0) = 0, Opportunity__r.Amount, Opportunity__r.Amount / NumberOfCycles__c)</formula>
        <label>Job Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JobStatusOverride__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Status Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>Job Cancelled</fullName>
                </value>
                <value>
                    <fullName>Job On Hold</fullName>
                </value>
                <value>
                    <fullName>Being Estimated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JobStatus__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <formula>if(text(JobStatusOverride__c) == &apos;Job Cancelled&apos; || text(JobStatusOverride__c) == &apos;Job On Hold&apos; || text(JobStatusOverride__c) == &apos;Being Estimated&apos; ,text(JobStatusOverride__c), 

if(JobCompletedDelivered__c = True, &apos;Phase 6 - Delivered&apos;,

if( text(PeerReviewStatus__c) &lt;&gt; &apos;&apos;, &apos;Phase 5 - Reviewed&apos;,

if( text(ProcessToUse__c) &lt;&gt; &apos;&apos; &amp;&amp;  StartDate__c &gt; DateValue(&apos;1980-01-01&apos;), &apos;Phase 3 - Designed&apos;,

if( StartDate__c  &gt; DateValue(&apos;1980-01-01&apos;), &apos;Phase 2 - Planned&apos;,

if( text(WRFQuality__c) &lt;&gt; &apos;&apos;, &apos;Phase 1 - Initiated&apos;,

&apos;Unknown&apos;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobType__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Ad-Hoc (non-cyclical)</fullName>
                </value>
                <value>
                    <fullName>Cyclical</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Estimate only</fullName>
                </value>
                <value>
                    <fullName>Internal Ad-Hoc</fullName>
                </value>
                <value>
                    <fullName>Internal Cyclical</fullName>
                </value>
                <value>
                    <fullName>Lights Out Process</fullName>
                </value>
                <value>
                    <fullName>Non-Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LateDeliverablesCalculated__c</fullName>
        <description>If the date proves the PLC is late, but the late deliverable field is 0 or null (not populated correctly), all deliverables are considered late.  Also, if defective, then the deliverable is late, even if it was delivered on time.</description>
        <formula>IF(   ( datevalue(DateTimeOfDelivery__c)&gt; NegotiatedDate__c   ) &amp;&amp; (  LateDeliverables__c =0  ||  ISNULL(LateDeliverables__c)  )

,   TotalDeliverables__c 
,    MAX(  DefectiveDeliverables__c ,  LateDeliverables__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late Deliverables Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LateDeliverables__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Late Deliverables</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: Legacy ID Unique field is a concatenation of the source system name and a source system record id to ensure record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>This field is used for data integration to store legacy system id in WRF POLK application.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for data integration to store legacy system id in WRF POLK application.</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <description>SFDC1-7046: Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7046: Legacy System field is a picklist that represents the original system the record came from.</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multipart__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for WRF-POLK.</description>
        <label>Multi-Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multipartnum__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <label>Multipart #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NegotiatedDate__c</fullName>
        <description>This field is used for WRF-POLK.</description>
        <inlineHelpText>If no Negotiated Date was provided, use the date from Requested Due Date to populate this required field</inlineHelpText>
        <label>Negotiated Date</label>
        <type>Date</type>
    </fields>
</CustomObject>